--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -31,12 +31,13 @@ img:hover+.price {
 .fa-shopping-bag::after {
   position: absolute;
   content: attr(count);
-  top: -10px;
-  right: -10px;
+  top: -15px;
+  right: -15px;
   background-color: yellow;
   border-radius: 50%;
-  width: 1em;
+  width: 1.3em;
   text-align: center;
+  font-size: .9em;
 }
 
 .col {
