--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -73,3 +73,15 @@ img:hover+.price {
 .pasarela-container {
   display: block;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
